fixed padding on mobile

--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -1,6 +1,6 @@
 .hidden{
     position: relative;
-    top: 200px;
+    top: 100px;
     opacity: 0 !important;
     transition: 1000ms ease-in-out;
 }
