--- a/sass/modules/_thoughts-awards.scss
+++ b/sass/modules/_thoughts-awards.scss
@@ -116,10 +116,18 @@
 
         &>h3{
             margin-bottom: 10px;
+            font-size: 18px;
+            @media (max-width: $large-phone-sizing){
+                font-size: 16px;
+            }
         }
 
         &>p{
             margin-bottom: 35px;
+            font-size: 18px;
+            @media (max-width: $large-phone-sizing){
+                font-size: 16px;
+            }
         }
         
     }
